[OCPLTTC-70, OCPLTTC-61] Updated Foundation breadcrumb styling to avoid cutting off descenders (on 'g', 'p', etc.).

--- a/drupal/sites/default/themes/ttctheme/src/scss/base/_init.scss
+++ b/drupal/sites/default/themes/ttctheme/src/scss/base/_init.scss
@@ -83,7 +83,7 @@ $form-label-font-size: rem-calc(18);
 
 // breadcrumbs
 $crumb-bg: transparent;
-$crumb-padding: ($column-gutter / 2) 0 0;
+$crumb-padding: ($column-gutter / 2) 0;
 $crumb-border-size: 0;
 $crumb-border-style: none;
 $crumb-border-color: transparent;
