--- a/drupal/sites/default/themes/ttctheme/src/scss/modules/_breadcrumbs.scss
+++ b/drupal/sites/default/themes/ttctheme/src/scss/modules/_breadcrumbs.scss
@@ -1,4 +1,5 @@
 .breadcrumbs {
+	margin-bottom: 0;
 	a {
 		font-weight: bold;
 	}
